// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionItem renders correctly with allowMultipleExpanded false 1`] = `
<div
  className="accordion__item"
>
  <div
    aria-controls="accordion__panel-0"
    aria-disabled={false}
    aria-expanded={false}
    className="accordion__heading"
    data-accordion-component="AccordionItemHeading"
    id="accordion__heading-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div>
      Fake title
    </div>
  </div>
  <div
    aria-labelledby="accordion__heading-0"
    className="accordion__panel"
    id="accordion__panel-0"
    role="region"
  >
    <div>
      Fake body
    </div>
  </div>
</div>
`;

exports[`AccordionItem renders correctly with allowMultipleExpanded true 1`] = `
<div
  className="accordion__item"
>
  <div
    aria-controls="accordion__panel-0"
    aria-disabled={false}
    aria-expanded={false}
    className="accordion__heading"
    data-accordion-component="AccordionItemHeading"
    id="accordion__heading-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div>
      Fake title
    </div>
  </div>
  <div
    aria-hidden={true}
    aria-labelledby="accordion__heading-0"
    className="accordion__panel"
    id="accordion__panel-0"
  >
    <div>
      Fake body
    </div>
  </div>
</div>
`;

exports[`AccordionItem renders correctly with allowZeroExpanded false 1`] = `
<div
  className="accordion__item"
>
  <div
    aria-controls="accordion__panel-0"
    aria-disabled={false}
    aria-expanded={false}
    className="accordion__heading"
    data-accordion-component="AccordionItemHeading"
    id="accordion__heading-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div>
      Fake title
    </div>
  </div>
  <div
    aria-labelledby="accordion__heading-0"
    className="accordion__panel"
    id="accordion__panel-0"
    role="region"
  >
    <div>
      Fake body
    </div>
  </div>
</div>
`;

exports[`AccordionItem renders correctly with allowZeroExpanded true 1`] = `
<div
  className="accordion__item"
>
  <div
    aria-controls="accordion__panel-0"
    aria-disabled={false}
    aria-expanded={false}
    className="accordion__heading"
    data-accordion-component="AccordionItemHeading"
    id="accordion__heading-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div>
      Fake title
    </div>
  </div>
  <div
    aria-labelledby="accordion__heading-0"
    className="accordion__panel"
    id="accordion__panel-0"
    role="region"
  >
    <div>
      Fake body
    </div>
  </div>
</div>
`;

exports[`AccordionItem renders correctly with other blocks inside 1`] = `
<div
  className="accordion__item"
>
  <div
    aria-controls="accordion__panel-0"
    aria-disabled={false}
    aria-expanded={false}
    className="accordion__heading"
    data-accordion-component="AccordionItemHeading"
    id="accordion__heading-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div>
      Fake title
    </div>
  </div>
  <div>
    Just another block
  </div>
  <div
    aria-labelledby="accordion__heading-0"
    className="accordion__panel"
    id="accordion__panel-0"
    role="region"
  >
    <div>
      Fake body
    </div>
  </div>
</div>
`;

exports[`AccordionItem renders correctly with other blocks inside 2 1`] = `
<div
  className="accordion__item"
>
  <div
    aria-controls="accordion__panel-0"
    aria-disabled={false}
    aria-expanded={false}
    className="accordion__heading"
    data-accordion-component="AccordionItemHeading"
    id="accordion__heading-0"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <div>
      Fake title
    </div>
  </div>
  <div
    aria-labelledby="accordion__heading-0"
    className="accordion__panel"
    id="accordion__panel-0"
    role="region"
  >
    <div>
      Fake body
    </div>
  </div>
  <div>
    Just another block
  </div>
</div>
`;

exports[`AccordionItem still renders with no AccordionItemHeading or AccordionItemPanel 1`] = `
<div
  className="accordion__item"
>
  <div>
    Fake title
  </div>
  <div>
    Fake body
  </div>
</div>
`;

exports[`AccordionItem still renders with no children at all 1`] = `
<div
  className="accordion__item"
/>
`;
